Add address type to all addresses input.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
               <input type="text" class="form-control" id="new-last-name">
             </div>
 
-            <div id="new-addresses">
+
+          <div id="new-addresses">
            <div class="new-address">
+             <div class="form-group address-type">
+               <label>What type of address is this?</label>
+               <select type="select" class="new-type">
+               <option type="address-type">Home</option>
+               <option type="address-type">Work</option>
+               </select>
+             </div>
              <div class="form-group">
                <label for="new-street">Street</label>
                <input type="text" class="form-control new-street">
@@ -63,7 +71,7 @@
             </ul>
           </div>
         </div>
-        
+
       </div>
     </div>
   </body>
