hide the secondary addresses upon submit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="container">
       <h1>Address book</h1>
 
+    <!-- <p id="boop">
+      Type in your <span>address and name </span> please!
+    </p> -->
+
       <div class="row">
         <div class="col-md-6">
           <h2>Add a contact:</h2>
